# yggdrasil

./: .gitignore  ChangeLog.md  README.md  Yggdrasil.agda  cabal.nix  default.nix  yggdrasil.cabal  yggdrasil.ipkg
:old/: default.nix  hydra.nix  yggdrasil.cabal  yggdrasil.nix
:old/src/Yggdrasil/: Distribution.hs  ExecutionModel.hs  Functionalities.hs  HList.hs  Nat.hs
:old/tests/: FunctTests.hs
Data/: Dag.idr
Yggdrasil/: Distribution.idr  ExecutionModel.idr  Extensible.idr  List.agda  Probability.agda  Rational.agda  Security.agda  World.agda  Zn.idr
Yggdrasil/Examples/: SecureChannel.agda
src/Yggdrasil/: Adversarial.hs  Distribution.hs  ExecutionModel.hs  Functionalities.hs  HList.hs  MetaProtocol.hs  SimpleState.hs
tests/: ExecTests.hs  FunctTests.hs  Spec.hs
