name:                yggdrasil
version:             0.1.0.0
synopsis:            Executable specifications of composable security protocols.
-- description:
homepage:            https://git.drwx.org/phd/yggdrasil
license:             AGPL-3
license-file:        LICENSE
author:              Thomas Kerber
maintainer:          t.kerber@ed.ac.uk
category:            Cryptography
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Yggdrasil.Adversarial
                       Yggdrasil.Distribution
                       Yggdrasil.ExecutionModel
                       Yggdrasil.Functionalities
  other-extensions:    GADTs
                       Rank2Types
                       ScopedTypeVariables
                       TupleSections
  build-depends:       base >= 4.11 && < 4.12
                     , cryptonite >= 0.25 && < 0.26
                     , memory >= 0.14 && < 0.15
                     , transformers >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Werror

test-suite spec
  type:             exitcode-stdio-1.0
  other-extensions: ScopedTypeVariables
  default-language: Haskell2010
  hs-source-dirs:   tests
  ghc-options:      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Werror
  main-is:          Spec.hs
  other-modules:    ExecTests
                    FunctTests
  build-depends:    cryptonite
                  , base
                  , hspec
                  , QuickCheck
                  , yggdrasil
